--- a/js/INDEX.html
+++ b/js/INDEX.html
@@ -1,6 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+        <script>
+            //Codigo JavaScript
+            function HolaMundo(){
+                alert("Hello World");
+            }
+
+            // (JS)prompt == InputBox (VB)
+            function ObtenerEdad(){
+                var edad = prompt("Insertar Edad", "19");
+                alert("Hola tu edad es: " + edad);
+            }
+
+            function CalcularEdad(){
+                var anioNacimiento = prompt("Insertar el año que nacio", "2005")
+                edad = 2024 - anioNacimiento
+                alert("Hola tu edad es: " + edad)
+            }
+
+        </script>
 <title>ALBA WEB</title>
 
 </head>
@@ -9,8 +29,11 @@
 <h1>Mi primera pagina web</h1>
 <p>UCB</p>
 
-<button type="button" click="HolaMundo()">
-click Me HOLA MUNDO! </button>
+<button type="button" onclick="HolaMundo()">Click Me HOLA MUNDO!</button>
+
+<button type="button" onclick="ObtenerEdad()">Click Me Obtener Edad!</button>
+
+<button type="button" onclick="CalcularEdad()">Click Me Calcular Edad!</button>
 
 </body>
 </html>
