--- a/POO/js/persona.html
+++ b/POO/js/persona.html
@@ -12,6 +12,7 @@
                 Mi Perfil
             </div>
             <div class="card-body">
+                <img src="https://lh3.googleusercontent.com/a/ACg8ocLEL_C9MMHitxT2a6p6cCmZu8eQyf7Q4iGDkJg0rytUSam6yg=s96-c-br100-rg-mo" width="100px" height="100px" alt="Imagen de perfil">
                 <img src="perfil.png" width="100px" height="100px" alt="Imagen de perfil">
                 <img src="perfil2.png" width="100px" height="100px" alt="Imagen de perfil">
                 <h5 class="card-title" id="saludar"></h5>
