--- a/POO/js/persona.html
+++ b/POO/js/persona.html
@@ -23,10 +23,17 @@
                 <button class="btn btn-primary" onclick="botonCumpleanios()">Edad</button>
                 <button class="btn btn-secondary" onclick="botonEstudiar()">Carrera</button>
                 <button class="btn btn-secondary" onclick="botonUniversidad()">Universidad</button>
+
+                <button class="btn btn-primary" onclick="botonModificarSaludar()">ModificarSaludar</button>
+                <button class="btn btn-primary" onclick="botonModificarCumpleanios()">ModificarEdad</button>
+                <button class="btn btn-secondary" onclick="botonModificarEstudiar()">ModificarCarrera</button>
+                <button class="btn btn-secondary" onclick="botonModificarUniversidad()">ModificarUniversidad</button>
+
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="persona.js"></script>
+    
 </body>
 </html>
