--- a/POO/js/persona.html
+++ b/POO/js/persona.html
@@ -19,15 +19,24 @@
                 <p class="card-text" id="edad"></p>
                 <p class="card-text" id="carrera"></p>
                 <p class="card-text" id="universidad"></p>
+
+                <h2>Valores Inciales</h2>
                 <button class="btn btn-primary" onclick="botonSaludar()">Saludar</button>
                 <button class="btn btn-primary" onclick="botonCumpleanios()">Edad</button>
                 <button class="btn btn-secondary" onclick="botonEstudiar()">Carrera</button>
                 <button class="btn btn-secondary" onclick="botonUniversidad()">Universidad</button>
 
-                <button class="btn btn-primary" onclick="botonModificarSaludar()">ModificarSaludar</button>
-                <button class="btn btn-primary" onclick="botonModificarCumpleanios()">ModificarEdad</button>
-                <button class="btn btn-secondary" onclick="botonModificarEstudiar()">ModificarCarrera</button>
-                <button class="btn btn-secondary" onclick="botonModificarUniversidad()">ModificarUniversidad</button>
+                <h2>Modificar valores</h2>
+                <button class="btn btn-primary" onclick="botonModificarSaludar()">Modificar Saludar</button>
+                <button class="btn btn-primary" onclick="botonModificarCumpleanios()">Modificar Edad</button>
+                <button class="btn btn-secondary" onclick="botonModificarEstudiar()">Modificar Carrera</button>
+                <button class="btn btn-secondary" onclick="botonModificarUniversidad()">Modificar Universidad</button>
+
+                <h2>Eliminar valores</h2>
+                <button class="btn btn-primary" onclick="botonEliminarSaludar()">Eliminar Saludar</button>
+                <button class="btn btn-primary" onclick="botonEliminarCumpleanios()">Eliminar Edad</button>
+                <button class="btn btn-secondary" onclick="botonEliminarEstudiar()">Eliminar Carrera</button>
+                <button class="btn btn-secondary" onclick="botonEliminarUniversidad()">Eliminar Universidad</button>
 
             </div>
         </div>
