factorial y numero perfecto

--- a/O1 Clase Entero/js/enteros.html
+++ b/O1 Clase Entero/js/enteros.html
@@ -40,6 +40,14 @@
                     <br>
                     <br>
                     <button class="btn btn-success" onclick="esPositivoNegativoValorNum()">ES POSITIVO NEGATIVO</button>
+                    <br>
+                    <br>
+                    <button class="btn btn-warning" onclick="factorialValorNum()">CALCULAR FACTORIAL</button>
+                    <br>
+                    <br>
+                    <button class="btn btn-info" onclick="esPerfectoValorNum()">ES NÚMERO PERFECTO</button>
+                    <br>
+                    <br>
                 </div>
                     <h1>RESULTADO</h1>
                     <div id="resultado" class="mt-2"></div>
