--- a/O1 Clase Entero/js/enteros.html
+++ b/O1 Clase Entero/js/enteros.html
@@ -48,6 +48,12 @@
                     <button class="btn btn-info" onclick="esPerfectoValorNum()">ES NÚMERO PERFECTO</button>
                     <br>
                     <br>
+                    <button class="btn btn-success" onclick="esPrimoValorNum()">ES NUMERO PRIMO</button>
+                    <br>
+                    <br>
+                    <button class="btn btn-info" onclick="calcularFibonacciValorNum()">CALCULAR FIBONACCI</button>
+                    <br>
+                    <br>
                 </div>
                     <h1>RESULTADO</h1>
                     <div id="resultado" class="mt-2"></div>
