--- a/02 CLASE CADENAS/js/cadenas.html
+++ b/02 CLASE CADENAS/js/cadenas.html
@@ -59,6 +59,9 @@
     <button onclick="ejecutar('longitud')">Longitud</button>
     <button onclick="ejecutar('aMayusculas')">A Mayúsculas</button>
     <button onclick="ejecutar('aMinusculas')">A Minúsculas</button>
+    <button onclick="ejecutar('convertirARomanos')">Converitr a Romanos</button>
+    <button onclick="ejecutar('generarTextoAleatorio')">Generar Texto Aleatorio</button>
+    <button onclick="ejecutar('convertirASCII')">Convertir a ASCII</button>
 
     <div id="resultado"></div>
 
