--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
     </div>
 
     <h2>Enlaces</h2>
-    <a href="http://libera.somee.com/lista-enteros.html" target="_blank">Lista Enteros en Línea</a>
+    <a href="http://libera.somee.com/enteros.html" target="_blank">Control de Numeros Enteros</a>
     <a href="http://libera.somee.com/cadenas.html" target="_blank">Clase Cadenas</a>
-    <a href="http://libera.somee.com/lista-enteros.html" target="_blank">Clase Lista Enteros</a>
+    <a href="http://libera.somee.com/lista-enteros.html" target="_blank"> Lista Enteros</a>
+    <a href="http://libera.somee.com/lista-cadenas.html" target="_blank"> Lista Cadenas</a>
 </div>
 
 </body>
