--- a/03 CLASE LISTA ENTEROS/js/lista-enteros.html
+++ b/03 CLASE LISTA ENTEROS/js/lista-enteros.html
@@ -8,68 +8,70 @@
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
-            color: #333;
             margin: 0;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            color: #333;
         }
-        h1 {
-            color: #007bff;
+        h1, h2 {
+            text-align: center;
+            color: #4CAF50;
         }
-        input {
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        input[type="number"] {
             padding: 10px;
+            width: calc(50% - 22px);
             border: 1px solid #ddd;
             border-radius: 5px;
-            width: 200px;
             margin-right: 10px;
-            transition: border-color 0.3s;
-        }
-        input:focus {
-            border-color: #007bff;
-            outline: none;
+            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
         }
         button {
             padding: 10px 15px;
-            background-color: #007bff;
-            color: white;
             border: none;
             border-radius: 5px;
+            background-color: #4CAF50;
+            color: white;
             cursor: pointer;
             transition: background-color 0.3s;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #45a049;
         }
         #lista {
             margin-top: 20px;
-            list-style-type: none;
             padding: 0;
-            width: 250px;
+            list-style-type: none;
         }
         #lista li {
-            background-color: white;
+            background: #e7f3fe;
             margin: 5px 0;
             padding: 10px;
             border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s;
-        }
-        #lista li:hover {
-            transform: scale(1.02);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-    <h1>Agregar Números a la Lista</h1>
-    <div>
+    <div class="container">
+        <h1>Agregar Números a la Lista</h1>
         <input type="number" id="numero" placeholder="Ingrese un número">
         <button id="agregarBtn">Agregar</button>
+        <input type="number" id="numeroEliminar" placeholder="Número a eliminar">
+        <button id="eliminarBtn">Eliminar</button>
+        <input type="number" id="numeroBuscar" placeholder="Número a buscar">
+        <button id="buscarBtn">Buscar</button>
+        <button id="ordenarBtn">Ordenar</button>
+        
+        <h2>Lista de Números</h2>
+        <ul id="lista"></ul>
     </div>
-    
-    <h2>Lista de Números</h2>
-    <ul id="lista"></ul>
 
     <script src="lista-enteros.js"></script>
 </body>
