--- a/TANK SHOOT 2D/index.html
+++ b/TANK SHOOT 2D/index.html
@@ -6,8 +6,8 @@
     <title>Tank Shoot 2D</title>
     <style>
         body {
-            background-color: black;
-            color: white;
+            background-color: #1a1a1a;
+            color: #f2f2f2;
             font-family: 'Press Start 2P', cursive;
             display: flex;
             justify-content: center;
@@ -15,6 +15,7 @@
             height: 100vh;
             margin: 0;
             flex-direction: column;
+            text-align: center;
         }
 
         @font-face {
@@ -22,50 +23,60 @@
             src: url('https://fonts.gstatic.com/s/pressstart2p/v9/e3t4euGtX-Co5MNzeAOqinEgeH4UE2w.woff2') format('woff2');
         }
 
-        h1, p {
-            text-align: center;
+        h1 {
+            font-size: 42px;
+            color: #ff9800;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 5px #000;
         }
 
-        h1 {
-            font-size: 36px;
-            color: orange;
+        p {
+            font-size: 18px;
+            margin: 10px 0;
+            color: #d4d4d4;
         }
 
         .high-score {
-            font-size: 16px;
-            margin-bottom: 20px;
-        }
-
-        .version {
-            font-size: 14px;
-            margin-top: 10px;
+            font-size: 18px;
+            margin-bottom: 30px;
+            color: #ffeb3b;
+            letter-spacing: 1.5px;
         }
 
         .game-button {
-            background-color: gray;
-            color: white;
-            padding: 15px 50px;
-            border: 3px solid white;
-            font-size: 20px;
+            background-color: #00d9ff;
+            color: #1a1a1a;
+            padding: 15px 60px;
+            border: none;
+            font-size: 22px;
             cursor: pointer;
-            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            border-radius: 8px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
         .game-button:hover {
-            background-color: darkgray;
+            background-color: #e65100;
+            transform: scale(1.05);
+        }
+
+        a {
+            text-decoration: none;
+            margin-top: 20px;
         }
 
         .footer {
             font-size: 12px;
-            margin-top: 20px;
+            margin-top: 30px;
+            color: #888;
         }
     </style>
 </head>
 <body>
-    <div class="high-score">HIGH SCORE 500</div>
-    <h1>TANK SHOOT 2D</h1>
-    <p class="version">Version 1.003 (C) Darksun Tech 2010-2019</p>
-    <div class="game-button">1P GAME</div>
-    <div class="footer">www.tankshoot.com</div>
+    <div class="high-score">HIGH SCORE: 500</div>
+    <h1>¡Bienvenido a Tank Shoot!</h1>
+    <p>Prepárate para la batalla en este emocionante juego 2D de tanques.</p>
+    <a href="tank-shoot.html" class="game-button">Jugar Ahora!</a>
 </body>
 </html>
