--- a/04 CLASE MATRIX/matrix.html
+++ b/04 CLASE MATRIX/matrix.html
@@ -21,9 +21,18 @@
             <button onclick="matriz.llenarMatriz4Bordes()">Patron Matriz 4 Bordes</button>
             <button onclick="matriz.llenarMatrizSecuencia1()">Patron Secuencia 1</button>
             <button onclick="matriz.llenarMatrizSecuencia2()">Patron Secuencia 2</button>
-            <button onclick="matriz.llenarMatrizSecuencia3()">Patron Secuencia 3</button>
+            <button onclick="matriz.llenarMatrizSecuencia2_a()">Patron Secuencia 2a</button>
         </div>
+        <div class="button-container">
+            <button onclick="matriz.llenarMatrizSecuencia_0_al_7()">Patron Secuencia 0 al 7</button>
+            <button onclick="matriz.llenarMatrizSecuencia_0_al_7_Col()">Patron Secuencia 0 al 7 Columnas</button>
+            <button onclick="matriz.llenarMatrizSecuencia3()">Patron Secuencia 3</button>
+            <button onclick="matriz.llenarMatrizSecuencia4()">Patron Secuencia 4</button>
+        </div>
+
     </div>
+
+</div>
     
     <!-- Scripts de JavaScript -->
     <script src="matrix.js"></script>
